@@ -381,11 +381,12 @@ bool BatchTool::savefromDImg() const
     if (frm.isEmpty())
     {
         // In case of output support is not set for ex. with all tool which do not convert to new format.
-        d->image.updateMetadata(DImg::formatToMimeType(detectedFormat), QString(), resetOrientation, true);
+        d->image.prepareMetadataToSave(outputUrl().toLocalFile(), DImg::formatToMimeType(detectedFormat),
+                                       resetOrientation);
         return( d->image.save(outputUrl().toLocalFile(), detectedFormat, d->observer) );
     }
 
-    d->image.updateMetadata(frm, QString(), resetOrientation, true);
+    d->image.prepareMetadataToSave(outputUrl().toLocalFile(), frm, resetOrientation);
     bool b   = d->image.save(outputUrl().toLocalFile(), frm, d->observer);
     d->image = DImg();
     return b;
